<resources>
    <string name="facebook_app_id">1555154554779605</string>
    <string name="app_name">SEEYOU</string>
    <string name="registration">Registration</string>
    <string name="sign_in_via_social_account">Sign Un via social network</string>
    <string name="or_via_email">Or via email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_refistering">RefisteringActivity</string>
    <string name="back">Back</string>
    <string name="video_selfie">VIDEOSELFIE</string>
    <string name="broadcasts">BROADCASTS</string>
    <string name="adoult_only">ADULT ONLY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by">by\t</string>
    <string name="views">Views\t</string>
    <string name="live_chanels">Live chanels</string>
    <string name="humor">Humor</string>
    <string name="policy">Policy</string>
    <string name="sport">Sport</string>
    <string name="family_children"><![CDATA[Family & Children]]></string>
    <string name="animals">Animals</string>
    <string name="art">Art</string>
    <string name="music">Music</string>
    <string name="style">Style</string>
    <string name="news">News</string>
    <string name="science">Science</string>
    <string name="places_trawel"><![CDATA[Places & Trawel]]></string>
    <string name="your_liked_videos">Your liked videos</string>
    <string name="upload_video">Upload video</string>
    <string name="select_file_to_upload">SELECT FILE</string>
    <string name="type_title_of_video">Type title of video</string>
    <string name="description_for_video">Description for video</string>
    <string name="video_category">Video category</string>
    <string name="select_category">Select category</string>
    <string name="sms_notification">SMS Notification</string>
    <string name="phone_number">Phone number</string>
    <string name="i_agree_to_seeyou_sterms_of_use">I agree to SeeYou\'sTerms of Use</string>
    <string name="upload_video_bt">UPLOAD VIDEO</string>
    <string name="sign_up_via_social_network">Sign Up via social network</string>
    <string name="n_nyour_friends_will_not">\n\nYour friends will not know that yuo are logged in SeeYou. We do not publish any information in you social network</string>
    <string name="the_next_time_you">The next time you enter the site, use the login we the selected social network</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="create_password">Create password</string>
    <string name="user_name">User name</string>
    <string name="insaider">Insaider</string>
    <string name="message">Notifications</string>
    <string name="my_profile">My profile</string>
    <string name="about_seeyou">About SeeYou</string>
    <string name="sign_out">Sign out</string>
    <string name="fill_title">Fill title</string>
    <string name="fill_path">Select file please</string>
    <string name="fill_description">Fill description</string>
    <string name="fill_category">Select category</string>
    <string name="fill_phone">Fill phone number</string>
    <string name="fill_agree">You need agree</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="sex">Sex</string>
    <string name="select_country">Select country</string>
    <string name="select_city">Select city</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update">Update</string>
    <string name="cancel">CANCEL</string>
    <string name="select_date">Select date</string>
    <string name="edit">Edit</string>
    <string name="date">Date</string>
    <string name="ok">Ok</string>
    <string name="title_activity_example">EXAMPLE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="cooperation">Cooperation</string>
    <string name="about">About</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="confidentiality">Confidentiality</string>
    <string name="help">Help</string>
    <string name="description_contacts">" “SeeYou” is a unique online source for entertaining events and places promotion. The users of our portal choose where, how and with whom they spend their leisure time."
        "\n"
        "    This video source is created for people who want to be in the spotlight, want to expand their opportunities, people who are not afraid of being heard and seen. Places where TV can’t be reached and social networks access is limited, there works “SeeYou”.\n"
        "\n"
        " \n"
        "\n"
        "Help\n"
        "\n"
        "   If you need any help click this link to open our Information center. There you can find answers to FAQ concerning the website and mobile applications, such as personal account creation, problems with watching channels, videos uploading etc. \n"
        "\n"
        "   If you have some difficulties or find a bug on the website/mobile application, please contact to us via: developers@seeyou.media. We are persistently working on the website and mobile application optimization!\n"
        "\n"
        " \n"
        "\n"
        "Media contacts\n"
        "\n"
        "   We encourage the Press and Media to contact “SeeYou” directly via: contacts@seeyou.media\n"
        "\n"
        " \n"
        "\n"
        "Additional contacts\n"
        "\n"
        " \n"
        "\n"
        "Contacts mails:\n"
        "\n"
        "contacts@seeyou.media (contacts),\n"
        "\n"
        "developers@seeyou.media (developers),\n"
        "\n"
        "info@seeyou.media (general questions)."</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="register_with_thr_e_mail">Register with thr e-mail</string>
</resources>