<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context=".login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_bg_green">


        <ImageView
            android:id="@+id/iv_main_icon_login"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="3"
            android:background="@color/color_bg_green"
            android:src="@drawable/logo_lit_512"/>


        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/small_margin">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_back"
                android:text="@string/back"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:fontFamily="ARIMO-BOLD.ttf"
                    android:gravity="center"
                    android:text="@string/sign_up_via_social_network"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/x_8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/midle_size_text"
                    android:fontFamily="ARIMO-BOLD.ttf"
                    android:gravity="center"
                    android:text="@string/n_nyour_friends_will_not"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/x_5"/>

                <include layout="@layout/content_registering"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/midle_size_text"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:fontFamily="ARIMO-BOLD.ttf"
                    android:gravity="center"
                    android:text="@string/the_next_time_you"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/x_5"/>

            </LinearLayout>

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/cardview_dark_background"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:fontFamily="ARIMO-BOLD.ttf"
                    android:gravity="center"
                    android:text="@string/register_with_thr_e_mail"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/x_8"/>

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/midle_size_text"
                    android:fontFamily="ARIMO-BOLD.ttf"
                    android:hint="@string/name"
                    android:singleLine="true"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/x_5"/>

                <EditText
                    android:id="@+id/et_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/midle_size_text"
                    android:fontFamily="ARIMO-BOLD.ttf"
                    android:hint="@string/surname"
                    android:singleLine="true"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/x_5"/>

                <EditText
                    android:id="@+id/et_create_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/midle_size_text"
                    android:fontFamily="ARIMO-BOLD.ttf"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/x_5"/>

                <EditText
                    android:id="@+id/et_create_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/midle_size_text"
                    android:fontFamily="ARIMO-BOLD.ttf"
                    android:hint="@string/create_password"
                    android:inputType="textPassword"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/x_5"/>


                <CheckBox
                    android:id="@+id/cb_license_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:fontFamily="ARIMO-BOLD.ttf"
                    android:text="@string/i_agree_to_seeyou_sterms_of_use"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/x_5"/>

                <Button
                    android:id="@+id/bt_register_register_activity"
                    android:layout_width="200dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:background="@drawable/bbut_normal"
                    android:fontFamily="ARIMO-BOLD.ttf"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/x_7"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
