<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main_upload"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@drawable/bc"
    tools:context="com.aleksandrp.seeyou.upload.UploadActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_bg_green">

        <RelativeLayout
            android:id="@+id/rl_back_upload"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/small_margin">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_back"
                android:text="@string/back"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/upload_video"
            android:textColor="@android:color/white"/>

        <include layout="@layout/icon_profile"
            android:id="@+id/layout_icon"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_upload_video"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="@color/cardview_dark_background"
                android:paddingBottom="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100sp"
                    android:layout_above="@+id/bt_load"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="?attr/actionBarSize"
                    android:src="@drawable/add_file"/>

                <Button
                    android:id="@+id/bt_load"
                    android:layout_width="200dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:background="@drawable/button_signin_bg"
                    android:gravity="center"
                    android:text="@string/select_file_to_upload"/>

                <VideoView
                    android:id="@+id/player_upload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_type_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:hint="@string/type_title_of_video"/>

                <EditText
                    android:id="@+id/et_description_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/description_for_video"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/midl_size"
                    android:text="@string/video_category"
                    android:textColor="@android:color/black"/>

                <RelativeLayout
                    android:id="@+id/ll_select_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/midl_size"
                    android:layout_marginTop="@dimen/midl_size"
                    android:background="@drawable/round"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_select_category"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="@dimen/midl_size"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/midl_size"
                        android:gravity="center"
                        android:hint="@string/select_category"
                        android:textColor="@android:color/black"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:src="@drawable/down"/>

                </RelativeLayout>

                <CheckBox
                    android:id="@+id/cb_sms_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/sms_notification"/>

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/midle_size_text"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLines="1"/>

                <CheckBox
                    android:id="@+id/cb_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/i_agree_to_seeyou_sterms_of_use"/>

                <Button
                    android:id="@+id/bt_upload_video"
                    android:layout_width="200dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:background="@drawable/button_signin_bg"
                    android:gravity="center"
                    android:text="@string/upload_video_bt"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/settings_profile_fragment"/>

    <ProgressBar
        android:id="@+id/progress_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

</RelativeLayout>
